# bitray

./: .buildinfo  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  README.rst  genindex.html  index.html  objects.inv  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/cxxapi/: byteray.doctree  index.doctree
.github/workflows/: build-deploy-docs.yml  build-test.yml
_sources/cxxapi/: byteray.rst.txt  index.rst.txt
cmake/: FindSphinx.cmake
cxxapi/: byteray.html  index.html
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
src/: CMakeLists.txt
src/bitray/: CMakeLists.txt  byteray.cc  byteray.h  filechunkcache.cc  filechunkcache.h
src/byteray/: CMakeLists.txt  byteray.cxx  byteray.h  byteray.hxx  filechunkcache.cxx  filechunkcache.h
src/tests/: CMakeLists.txt  main.cxx
tests/: CMakeLists.txt
tests/benchmarks/: CMakeLists.txt  bm_byteray.cc  bm_byteray.cxx  bm_vector.cc
tests/unit/: CMakeLists.txt  test_bigbyteray.cc  test_simplebyteray.cc  test_simplebyteray.cxx
